fix(mobile): reduce logo min-width to 140px (120px on small screens)

--- a/apps/website/app/scss/components/_header.scss
+++ b/apps/website/app/scss/components/_header.scss
@@ -84,7 +84,11 @@
       margin-right: 30px;
 
       img {
-        min-width: 152px;
+        min-width: 140px;
+
+        @include screen-small {
+          min-width: 120px;
+        }
       }
 
       @include screen-small {
